--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,4 +18,4 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: 'PHP Syntax Checker (Lint) ${{ matrix.php }}'
-      uses: StephaneBour/actions-php-lint@${{ matrix.php }}
+      uses: 'StephaneBour/actions-php-lint@${{ matrix.php }}'
