--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,8 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set PHP ${{ matrix.php }}
-      run: sudo update-alternatives --set php $(which php${{ matrix.php }})
+    - name: Setup PHP ${{ matrix.php }}
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php }}
 
     - name: 'PHP ${{ matrix.php }}'
       uses: overtrue/phplint@master
